# quantbt

./: .gitignore  README.md  README_ko.md  binance_downloader.py  debug_upbit.py  improved_backtesting_engine_design.md  pyproject.toml  quantbt_implementation_guide.md  quantbt_performance_analysis.md  requirements.txt  simple_polars_test.py  test.py  test_bottleneck_profiling.py  백테스팅_엔진_구조_분석.md
binance_data/: BTCUSDT_1m_20240101_20240107.csv  ETHUSDT_1m_20240101_20240107.csv
data/cache/: 018f861643a64434.parquet  01ef65a8460e1427.parquet  020675b70bc51b74.parquet  0577bf6c89cc3131.parquet  06caf7a007b790b6.parquet  077fdfa41cb6532f.parquet  0949942f14fef9cd.parquet  0a355ad225db1330.parquet  0bf0145936222d07.parquet  0c9d7aa3c0ecbac6.parquet  0e06a9892bfc8977.parquet  0e2644238e784c0a.parquet  0fb239b5d69b5302.parquet  0fcd36181205f3b6.parquet  10f1044b78eaf0b7.parquet  10f20f2753329f12.parquet  110ee417d83fbede.parquet  113bc102d23b0af7.parquet  1364d3c1e884b397.parquet  1418c84d31c437ee.parquet  14fab0dd061f28af.parquet  169ef8b0d7b14bdc.parquet  179e1bb9d4b8d7c2.parquet  1807c142a75d0293.parquet  18631a05bcb575d1.parquet  18d13df1f998eb5f.parquet  18f7d0d568144049.parquet  192b203207e2a0f3.parquet  19f1a108e86de5a5.parquet  1a282e1afa372116.parquet  1ac151ff6f460ba0.parquet  20b835f9553cbade.parquet  222ea5ec5910c0fb.parquet  22cbc31cabacc158.parquet  250a122fed69e791.parquet  2574a50fa3c5754b.parquet  25cacb1e2707570c.parquet  278939ff4628042b.parquet  27cffdfcff40c21c.parquet  290ca33e483edfb5.parquet  (+196 more)
example_data/: BTCUSDT_1m_20250627_20250629.csv  ETHUSDT_1m_20250627_20250629.csv
examples/: binance_example.py
quantbt/: __init__.py  config.py
quantbt/core/: __init__.py
quantbt/core/entities/: __init__.py  market_data.py  order.py  position.py  trade.py
quantbt/core/interfaces/: __init__.py  backtest_engine.py  broker.py  data_provider.py  strategy.py
quantbt/core/strategies/: __init__.py  dict_based.py
quantbt/core/utils/: __init__.py  timeframe.py
quantbt/core/value_objects/: __init__.py  backtest_config.py  backtest_result.py  grid_search_config.py  grid_search_result.py
quantbt/docs/: 00_csv_data_loading_guide.md  01_simple_strategy_guide.md  01_simple_strategy_tutorial.md  02_multi_symbol_strategy_guide.md  03_cross_symbol_indicator_strategy_guide.md  04_multi_timeframe_strategy_guide.md  05_parallel_search_guide.md  06_bayesian_optimization_guide.md  multi_symbol_guide.md  multi_timeframe_guide.md  simple_strategy_tutorial_results.md  upbit_provider_guide.md
quantbt/examples/: 00_csv_dataloader.py  01_simple_strategy.ipynb  01_simple_strategy.py  02_multi_symbol_strategy.ipynb  03_cross_symbol_indicator_strategy.ipynb  04_multi_timeframe_strategy.ipynb  04_parallel_search.ipynb  05_parallel_search.ipynb  06_bayesian_optimization.ipynb  __init__.py  cross_symbol_test.py  debug_parallel_test.py  equity_validation_test.py  multi_symbol_test.py  multi_timeframe_advanced_example.py  multi_timeframe_backtest_example.py  multi_timeframe_basic_example.py  multi_timeframe_strategy.py  multi_timeframe_test.py  parallel_grid_search_test.py  pararell_test.py  progress_tracker_demo.py  ray_cluster_test.py  ray_monitor_test.py  simple_grid_search_test.py  simple_sma_ray_test.py  simple_sma_test.py  simple_sma_test_performance.py  simple_strategy.py  simple_strategy_tutorial.ipynb  test.py  thread_parallel_test.py  upbit_example.py  upbit_provider_tutorial.ipynb  visual_test.ipynb  visualization_example.ipynb  visualization_test.py
quantbt/examples/strategies/: __init__.py  multi_timeframe_sma_strategy.py  simple_sma_strategy.py  sma_dict_strategy.py  sma_grid_strategy.py
quantbt/infrastructure/: __init__.py
quantbt/infrastructure/brokers/: __init__.py  simple_broker.py
quantbt/infrastructure/data/: __init__.py  binance_provider.py  cache_manager.py  csv_provider.py  database_manager.py  upbit_provider.py
quantbt/infrastructure/engine/: __init__.py  base_engine.py  parallel_backtest_engine.py  simple_engine.py
quantbt/ray/: __init__.py  backtest_actor.py  bayesian_parameter_optimizer.py  cluster_manager.py  data_manager.py  parameter_optimizer.py  quantbt_engine_adapter.py  result_aggregator.py
quantbt/ray/monitoring/: __init__.py  progress_tracker.py  simple_monitor.py
quantbt/ray/optimization/: bayesian_optimizer.py  early_stopping.py  parameter_space.py
quantbt/utils/: backtest_worker.py  parameter_optimizer.py  performance_profiler.py  result_aggregator.py
tests/: test_backtest_engine.py  test_broker.py  test_data_provider.py  test_entities.py  test_indicator_precompute.py
