[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbt"
version = "0.1.3"
description = "Quant Trading Backtesting Engine"
readme = "README.md"
license = "MIT"
authors = [
    {name = "QuantBT Team", email = "soundlayerd@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.30.0",
    "numpy>=1.24.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "typing-extensions>=4.0.0",
    "python-dateutil>=2.8.0",
    "pyarrow>=10.0.0",
    "tqdm>=4.60.0",
    "ray>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black",
    "isort",
    "mypy",
]
visualization = [
    "matplotlib>=3.8.0",
    "plotly>=5.0.0",
]
optimization = [
    "scikit-optimize>=0.10.0",
    "bayesian-optimization>=3.0.0",
    "optuna>=4.0.0",
]
analysis = [
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
all = [
    "quantbt[visualization,optimization,analysis]",
]

[project.urls]
Homepage = "https://github.com/lazydok/quantbt"
Repository = "https://github.com/lazydok/quantbt"
Documentation = "https://github.com/lazydok/quantbt/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantbt*"]
exclude = ["tests*", "data*", "dev_docs*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 